# financeapps

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  SECURITY.md  auth.ts  capacitor.config.ts  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  instrumentation.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  sonar-project.properties  tailwind.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
components/: app-settings-sync.tsx  app-sidebar.tsx  automation-runner.tsx  category-icon.tsx  command-palette.tsx  dashboard-action-plan.tsx  dashboard-forecast-strip.tsx  dashboard-overview.tsx  empty-state.tsx  finance-health-card.tsx  hub-tabs.tsx  info-hint.tsx  keyboard-shortcuts.tsx  layout-shell.tsx  loading-card.tsx  metric-card.tsx  mobile-navigation.tsx  notification-bell.tsx  onboarding-banner.tsx  onboarding-tour.tsx  page-header.tsx  print-button.tsx  profile-switcher.tsx  providers.tsx  quick-add-button.tsx  quick-add-fab.tsx  recommendation-list.tsx  service-worker-register.tsx  source-banner.tsx  theme-toggle.tsx  toast-listener.tsx
docs/: DESKTOP_LOCAL_MODE.md  DESKTOP_UPDATES.md  RELEASE_CHECKLIST.md  WEB_DEPLOY.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.updater.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+386 files in other folders)
