[package]
name = "financial-assistant"
version = "1.3.0"
description = "Financial Assistant MVP desktop shell"
authors = ["Financial Assistant"]
edition = "2021"

[lib]
name = "financial_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optimized release profile for the Windows 10/11 desktop build: smaller and
# faster binary (link-time optimization, single codegen unit, stripped symbols).
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
